--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "express-flash": "0.0.2",
         "express-handlebars": "^5.1.0",
         "express-session": "^1.17.1",
-        "mocha": "^8.1.3",
         "pg": "^8.3.3",
         "update": "^0.7.4"
+    },
+    "devDependencies": {
+        "mocha": "^8.1.3"
     }
 }
